Refactor authentication and update project structure
- Renamed project from Under4Games to Chik, updating relevant paths and scripts in package.json.
- Added a new endpoint in AuthController for refreshing access tokens, enhancing session management.
- Removed FusionAuthClientException and replaced it with InvalidJwtException for better error handling.
- Updated authentication extensions to streamline token retrieval and validation processes.
- Enhanced ILoginService and LoginService to support token verification and refresh functionality.
- Adjusted OpenAPI specification to include the new refresh token endpoint and updated version to 1.0.1.
